# goit-pythonweb-hw-10

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  auth_bearer.py  cloudinary_service.py  crud.py  database.py  email_service.py  main.py  models.py  models_user.py  schemas.py  schemas_user.py
app/routes/: auth.py  contacts.py  users.py
