[tool.poetry]
name = "goit-pythonweb-hw-10"
version = "1.0.0"
description = ""
authors = ["Oleh"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

fastapi = "^0.115.0"
uvicorn = "^0.30.0"

sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"

python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "4.0.1"

python-multipart = "^0.0.9"

fastapi-mail = "^1.4.1"

itsdangerous = "^2.2.0"

slowapi = "^0.1.9"

cloudinary = "^1.40.0"

python-dotenv = "^1.0.1"

email-validator = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"